Preserve nullable declared-action payload lists